--- a/OmneFictio.Web/wwwroot/css/comment_section.css
+++ b/OmneFictio.Web/wwwroot/css/comment_section.css
@@ -63,35 +63,32 @@
   text-decoration: underline;
 }
 
-.comments {
-  width: 100%;
-}
-.comments .comment-cont {
+.comment-cont {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   padding: 6px 0 14px;
   border-top: 2px solid var(--background-color2);
 }
-.comments .comment-cont .comment {
+.comment-cont .comment {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-.comments .comment-cont .comment .c-header {
+.comment-cont .comment .c-header {
   display: flex;
   align-items: center;
   position: relative;
   padding: 0 6px;
   font-family: "Itim", cursive;
 }
-.comments .comment-cont .comment .c-header img {
+.comment-cont .comment .c-header img {
   height: 1.3rem;
   width: 1.3rem;
   border-radius: 50%;
   cursor: pointer;
 }
-.comments .comment-cont .comment .c-header .c-username {
+.comment-cont .comment .c-header .c-username {
   font-size: 0.8rem;
   cursor: pointer;
   margin: 0 6px;
@@ -100,12 +97,12 @@
   overflow: hidden;
   max-width: 180px;
 }
-.comments .comment-cont .comment .c-header .c-date {
+.comment-cont .comment .c-header .c-date {
   color: var(--text-color2);
   font-size: 0.7rem;
   font-family: "Gudea";
 }
-.comments .comment-cont .comment .c-header .c-menu {
+.comment-cont .comment .c-header .c-menu {
   margin-left: auto;
   display: flex;
   height: 100%;
@@ -113,10 +110,10 @@
   font-size: 1.6rem;
   cursor: pointer;
 }
-.comments .comment-cont .comment .c-header .c-menu i {
+.comment-cont .comment .c-header .c-menu i {
   display: flex;
 }
-.comments .comment-cont .comment .c-header .c-menupopup {
+.comment-cont .comment .c-header .c-menupopup {
   display: none;
   position: absolute;
   top: 30px;
@@ -127,47 +124,47 @@
   background-color: var(--comment-menu-bgcolor);
   box-shadow: 0 2px 10px 0px rgba(0, 0, 0, 0.25);
 }
-.comments .comment-cont .comment .c-header .c-menupopup li {
+.comment-cont .comment .c-header .c-menupopup li {
   padding: 3px 10px;
   border-bottom: 1px solid var(--background-color-hover3);
   white-space: nowrap;
   transition: background-color 0.1s ease;
   cursor: pointer;
 }
-.comments .comment-cont .comment .c-header .c-menupopup li:hover {
+.comment-cont .comment .c-header .c-menupopup li:hover {
   background-color: var(--background-color-hover2);
 }
-.comments .comment-cont .comment .c-header .c-menupopup li:first-child {
+.comment-cont .comment .c-header .c-menupopup li:first-child {
   border-radius: 6px 6px 0 0;
 }
-.comments .comment-cont .comment .c-header .c-menupopup li:last-child {
+.comment-cont .comment .c-header .c-menupopup li:last-child {
   border-radius: 0 0 6px 6px;
   border-bottom: unset;
 }
-.comments .comment-cont .comment .c-header .lightmode .c-menupopup {
+.comment-cont .comment .c-header .lightmode .c-menupopup {
   box-shadow: 0 2px 10px 0px rgba(0, 0, 0, 0.1) !important;
 }
-.comments .comment-cont .comment .c-text {
+.comment-cont .comment .c-text {
   padding: 0px 10px;
   margin: 6px 0;
   font-size: 0.9rem;
   font-family: "Gudea", sans-serif;
   line-height: 1rem;
 }
-.comments .comment-cont .comment .c-text span {
+.comment-cont .comment .c-text span {
   flex-grow: 1;
   display: -webkit-box;
   -webkit-line-clamp: 10;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-.comments .comment-cont .comment .c-footer {
+.comment-cont .comment .c-footer {
   font-family: "Itim", cursive;
   display: flex;
   flex-flow: wrap;
   align-items: flex-start;
 }
-.comments .comment-cont .comment .c-footer .c-evaluation {
+.comment-cont .comment .c-footer .c-evaluation {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -175,22 +172,25 @@
   padding-left: 10px;
   color: var(--text-color2);
 }
-.comments .comment-cont .comment .c-footer .c-evaluation i {
+.comment-cont .comment .c-footer .c-evaluation i {
   font-size: 1.2rem;
   cursor: pointer;
   transition: color 0.2s ease;
 }
-.comments .comment-cont .comment .c-footer .c-evaluation .c-likes {
+.comment-cont .comment .c-footer .c-evaluation .c-likes {
   padding: 0 8px;
 }
-.comments .comment-cont .comment .c-footer .c-evaluation .c-replybtn {
+.comment-cont .comment .c-footer .c-evaluation a {
   margin-left: 14px;
   font-family: "Josefin Sans", sans-serif;
   color: var(--text-color1);
   padding: 2px 0 0;
   margin-bottom: -1px;
 }
-.comments .comment-cont .comment .c-footer .get_replies {
+.comment-cont .comment .c-footer .c-evaluation a:hover {
+  text-decoration: underline;
+}
+.comment-cont .comment .c-footer .get_replies {
   background-color: var(--reply-bgcolor);
   padding: 4px 26px;
   border-radius: 6px 6px 0 0;
@@ -198,7 +198,7 @@
   margin-left: auto;
   cursor: pointer;
 }
-.comments .comment-cont .reply {
+.comment-cont .reply {
   display: flex;
   flex-direction: column;
   width: 92%;
@@ -206,19 +206,19 @@
   background-color: var(--reply-bgcolor);
   padding: 6px 0;
 }
-.comments .comment-cont .reply .r-text {
+.comment-cont .reply .r-text {
   padding: 0 10px 6px;
   font-size: 0.9rem;
   font-family: "Gudea", sans-serif;
   line-height: 1rem;
 }
-.comments .comment-cont .reply .r-footer {
+.comment-cont .reply .r-footer {
   font-family: "Itim", cursive;
   display: flex;
   flex-flow: wrap;
   align-items: center;
 }
-.comments .comment-cont .reply .r-footer .r-evaluation {
+.comment-cont .reply .r-footer .r-evaluation {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -226,26 +226,26 @@
   padding-left: 6px;
   color: var(--text-color2);
 }
-.comments .comment-cont .reply .r-footer .r-evaluation i {
+.comment-cont .reply .r-footer .r-evaluation i {
   font-size: 1.1rem;
   cursor: pointer;
   transition: color 0.2s ease;
 }
-.comments .comment-cont .reply .r-footer .r-evaluation .r-likes {
+.comment-cont .reply .r-footer .r-evaluation .r-likes {
   padding: 0 6px;
 }
-.comments .comment-cont .reply .r-footer .r-evaluation .r-gotoreply {
+.comment-cont .reply .r-footer .r-evaluation .r-gotoreply {
   margin-left: 14px;
   font-family: "Gudea", sans-serif;
   color: var(--text-color1);
 }
-.comments .comment-cont .reply .r-footer .r-user {
+.comment-cont .reply .r-footer .r-user {
   display: flex;
   align-items: center;
   padding-right: 6px;
   margin-left: auto;
 }
-.comments .comment-cont .reply .r-footer .r-user .r-username {
+.comment-cont .reply .r-footer .r-user .r-username {
   font-size: 0.8rem;
   cursor: pointer;
   padding: 0 8px;
@@ -254,7 +254,7 @@
   overflow: hidden;
   max-width: 180px;
 }
-.comments .comment-cont .reply .r-footer .r-user img {
+.comment-cont .reply .r-footer .r-user img {
   height: 1.3rem;
   width: 1.3rem;
   border-radius: 50%;
@@ -312,6 +312,7 @@
   display: flex;
   align-items: center;
   font-family: "Itim", cursive;
+  flex-wrap: wrap;
 }
 .modal-replies .mr-body .mr-comment .mrc-header img {
   height: 1.7rem;
@@ -377,6 +378,9 @@
   color: var(--text-color1);
   padding: 2px 0 0;
   margin-bottom: -1px;
+}
+.modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation .mrc-replybtn:hover {
+  text-decoration: underline;
 }
 .modal-replies .mr-body .mr-reply {
   display: flex;
@@ -463,6 +467,9 @@
   color: var(--text-color1);
   margin-bottom: -3px;
   font-size: 0.9rem;
+}
+.modal-replies .mr-body .mr-reply .mrr-footer .mrr-evaluation .mrr-replybtn:hover {
+  text-decoration: underline;
 }
 
 @media (min-width: 768px) {
