--- a/OmneFictio.Web/wwwroot/css/comment_section.scss
+++ b/OmneFictio.Web/wwwroot/css/comment_section.scss
@@ -71,231 +71,230 @@
     }
 }
 
-.comments {
-    width: 100%;
+.comment-cont {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 6px 0 14px;
+    border-top: 2px solid var(--background-color2);
 
-    .comment-cont {
+    .comment {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
-        padding: 6px 0 14px;
-        border-top: 2px solid var(--background-color2);
+        width: 100%;
 
-        .comment {
+        //box-shadow: 0px 6px 8px -7px #00000060;
+        .c-header {
             display: flex;
-            flex-direction: column;
-            width: 100%;
+            align-items: center;
+            position: relative;
+            padding: 0 6px;
+            font-family: "Itim", cursive;
 
-            //box-shadow: 0px 6px 8px -7px #00000060;
-            .c-header {
+            img {
+                height: 1.3rem;
+                width: 1.3rem;
+                border-radius: 50%;
+                cursor: pointer;
+            }
+
+            .c-username {
+                font-size: 0.8rem;
+                cursor: pointer;
+                margin: 0 6px;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+                max-width: 180px;
+            }
+
+            .c-date {
+                color: var(--text-color2);
+                font-size: 0.7rem;
+                font-family: 'Gudea';
+            }
+
+            .c-menu {
+                margin-left: auto;
                 display: flex;
-                align-items: center;
-                position: relative;
-                padding: 0 6px;
-                font-family: "Itim", cursive;
+                height: 100%;
+                padding: 0 10px;
+                font-size: 1.6rem;
+                cursor: pointer;
 
-                img {
-                    height: 1.3rem;
-                    width: 1.3rem;
-                    border-radius: 50%;
+                i {
+                    display: flex;
+                }
+            }
+
+            .c-menupopup {
+                display: none;
+                position: absolute;
+                top: 30px;
+                right: 12px;
+                padding: 6px 4px;
+                border-radius: 6px;
+                font-size: 1rem;
+                background-color: var(--comment-menu-bgcolor);
+                box-shadow: 0 2px 10px 0px rgb(0 0 0 / 25%);
+
+                li {
+                    padding: 3px 10px;
+                    border-bottom: 1px solid var(--background-color-hover3);
+                    white-space: nowrap;
+                    transition: background-color 0.1s ease;
                     cursor: pointer;
+
+                    &:hover {
+                        background-color: var(--background-color-hover2);
+                    }
+
+                    &:first-child {
+                        border-radius: 6px 6px 0 0;
+                    }
+
+                    &:last-child {
+                        border-radius: 0 0 6px 6px;
+                        border-bottom: unset;
+                    }
+                }
+            }
+
+            .lightmode .c-menupopup {
+                box-shadow: 0 2px 10px 0px rgb(0 0 0 / 10%) !important;
+            }
+        }
+
+        .c-text {
+            padding: 0px 10px;
+            margin: 6px 0;
+            font-size: 0.9rem;
+            font-family: "Gudea", sans-serif;
+            line-height: 1rem;
+
+            span {
+                flex-grow: 1;
+                display: -webkit-box;
+                -webkit-line-clamp: 10;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+        }
+
+        .c-footer {
+            font-family: "Itim", cursive;
+            display: flex;
+            flex-flow: wrap;
+            align-items: flex-start;
+
+            .c-evaluation {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+                padding-left: 10px;
+                color: var(--text-color2);
+
+                i {
+                    font-size: 1.2rem;
+                    cursor: pointer;
+                    transition: color 0.2s ease;
                 }
 
-                .c-username {
+                .c-likes {
+                    padding: 0 8px;
+                }
+
+                a {
+                    margin-left: 14px;
+                    font-family: 'Josefin Sans', sans-serif;
+                    color: var(--text-color1);
+                    padding: 2px 0 0;
+                    margin-bottom: -1px;
+                    &:hover{
+                        text-decoration: underline;
+                    }
+                }
+            }
+
+            .get_replies {
+                background-color: var(--reply-bgcolor);
+                padding: 4px 26px;
+                border-radius: 6px 6px 0 0;
+                text-decoration: underline;
+                margin-left: auto;
+                cursor: pointer;
+            }
+        }
+    }
+
+    .reply {
+        display: flex;
+        flex-direction: column;
+        width: 92%;
+        border-radius: 6px 0 6px 6px;
+        background-color: var(--reply-bgcolor);
+        padding: 6px 0;
+
+        .r-text {
+            padding: 0 10px 6px;
+            font-size: 0.9rem;
+            font-family: "Gudea", sans-serif;
+            line-height: 1rem;
+        }
+
+        .r-footer {
+            font-family: "Itim", cursive;
+            display: flex;
+            flex-flow: wrap;
+            align-items: center;
+
+            .r-evaluation {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+                padding-left: 6px;
+                color: var(--text-color2);
+
+                i {
+                    font-size: 1.1rem;
+                    cursor: pointer;
+                    transition: color 0.2s ease;
+                }
+
+                .r-likes {
+                    padding: 0 6px;
+                }
+
+                .r-gotoreply {
+                    margin-left: 14px;
+                    font-family: 'Gudea', sans-serif;
+                    color: var(--text-color1);
+                }
+            }
+
+            .r-user {
+                display: flex;
+                align-items: center;
+                padding-right: 6px;
+                margin-left: auto;
+
+                .r-username {
                     font-size: 0.8rem;
                     cursor: pointer;
-                    margin: 0 6px;
+                    padding: 0 8px;
                     text-overflow: ellipsis;
                     white-space: nowrap;
                     overflow: hidden;
                     max-width: 180px;
                 }
 
-                .c-date {
-                    color: var(--text-color2);
-                    font-size: 0.7rem;
-                    font-family: 'Gudea';
-                }
-
-                .c-menu {
-                    margin-left: auto;
-                    display: flex;
-                    height: 100%;
-                    padding: 0 10px;
-                    font-size: 1.6rem;
+                img {
+                    height: 1.3rem;
+                    width: 1.3rem;
+                    border-radius: 50%;
                     cursor: pointer;
-
-                    i {
-                        display: flex;
-                    }
-                }
-
-                .c-menupopup {
-                    display: none;
-                    position: absolute;
-                    top: 30px;
-                    right: 12px;
-                    padding: 6px 4px;
-                    border-radius: 6px;
-                    font-size: 1rem;
-                    background-color: var(--comment-menu-bgcolor);
-                    box-shadow: 0 2px 10px 0px rgb(0 0 0 / 25%);
-
-                    li {
-                        padding: 3px 10px;
-                        border-bottom: 1px solid var(--background-color-hover3);
-                        white-space: nowrap;
-                        transition: background-color 0.1s ease;
-                        cursor: pointer;
-
-                        &:hover {
-                            background-color: var(--background-color-hover2);
-                        }
-
-                        &:first-child {
-                            border-radius: 6px 6px 0 0;
-                        }
-
-                        &:last-child {
-                            border-radius: 0 0 6px 6px;
-                            border-bottom: unset;
-                        }
-                    }
-                }
-
-                .lightmode .c-menupopup {
-                    box-shadow: 0 2px 10px 0px rgb(0 0 0 / 10%) !important;
-                }
-            }
-
-            .c-text {
-                padding: 0px 10px;
-                margin: 6px 0;
-                font-size: 0.9rem;
-                font-family: "Gudea", sans-serif;
-                line-height: 1rem;
-
-                span {
-                    flex-grow: 1;
-                    display: -webkit-box;
-                    -webkit-line-clamp: 10;
-                    -webkit-box-orient: vertical;
-                    overflow: hidden;
-                }
-            }
-
-            .c-footer {
-                font-family: "Itim", cursive;
-                display: flex;
-                flex-flow: wrap;
-                align-items: flex-start;
-
-                .c-evaluation {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: flex-start;
-                    align-items: center;
-                    padding-left: 10px;
-                    color: var(--text-color2);
-
-                    i {
-                        font-size: 1.2rem;
-                        cursor: pointer;
-                        transition: color 0.2s ease;
-                    }
-
-                    .c-likes {
-                        padding: 0 8px;
-                    }
-
-                    .c-replybtn {
-                        margin-left: 14px;
-                        font-family: 'Josefin Sans', sans-serif;
-                        color: var(--text-color1);
-                        padding: 2px 0 0;
-                        margin-bottom: -1px;
-                    }
-                }
-
-                .get_replies {
-                    background-color: var(--reply-bgcolor);
-                    padding: 4px 26px;
-                    border-radius: 6px 6px 0 0;
-                    text-decoration: underline;
-                    margin-left: auto;
-                    cursor: pointer;
-                }
-            }
-        }
-
-        .reply {
-            display: flex;
-            flex-direction: column;
-            width: 92%;
-            border-radius: 6px 0 6px 6px;
-            background-color: var(--reply-bgcolor);
-            padding: 6px 0;
-
-            .r-text {
-                padding: 0 10px 6px;
-                font-size: 0.9rem;
-                font-family: "Gudea", sans-serif;
-                line-height: 1rem;
-            }
-
-            .r-footer {
-                font-family: "Itim", cursive;
-                display: flex;
-                flex-flow: wrap;
-                align-items: center;
-
-                .r-evaluation {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: flex-start;
-                    align-items: center;
-                    padding-left: 6px;
-                    color: var(--text-color2);
-
-                    i {
-                        font-size: 1.1rem;
-                        cursor: pointer;
-                        transition: color 0.2s ease;
-                    }
-
-                    .r-likes {
-                        padding: 0 6px;
-                    }
-
-                    .r-gotoreply {
-                        margin-left: 14px;
-                        font-family: 'Gudea', sans-serif;
-                        color: var(--text-color1);
-                    }
-                }
-
-                .r-user {
-                    display: flex;
-                    align-items: center;
-                    padding-right: 6px;
-                    margin-left: auto;
-
-                    .r-username {
-                        font-size: 0.8rem;
-                        cursor: pointer;
-                        padding: 0 8px;
-                        text-overflow: ellipsis;
-                        white-space: nowrap;
-                        overflow: hidden;
-                        max-width: 180px;
-                    }
-
-                    img {
-                        height: 1.3rem;
-                        width: 1.3rem;
-                        border-radius: 50%;
-                        cursor: pointer;
-                    }
                 }
             }
         }
@@ -357,6 +356,7 @@
                 display: flex;
                 align-items: center;
                 font-family: "Itim", cursive;
+                flex-wrap: wrap;
 
                 img {
                     height: 1.7rem;
@@ -433,6 +433,9 @@
                         color: var(--text-color1);
                         padding: 2px 0 0;
                         margin-bottom: -1px;
+                        &:hover{
+                            text-decoration: underline;
+                        }
                     }
                 }
             }
@@ -533,6 +536,9 @@
                         color: var(--text-color1);
                         margin-bottom: -3px;
                         font-size: 0.9rem;
+                        &:hover{
+                            text-decoration: underline;
+                        }
                     }
                 }
             }
@@ -560,6 +566,7 @@
         }
     }
 }
+
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
     .modal-replies {
