comment and post skeletons update

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -46,6 +46,23 @@
     <div class="modalbg2"></div>
 
 
+    <template id="commentSkeleton">
+        <div class="comment-skel">
+            <div class="cskel-header">
+                <i class="bi bi-person-fill csk-item"></i>
+                <div class="cskel-user csk-item"></div>
+                <i class="bi bi-three-dots csk-item"></i>
+            </div>
+            <div class="cskel-body">
+                <div class="cskel-desc csk-item"></div>
+                <div class="cskel-desc csk-item"></div>
+            </div>
+            <div class="cskel-footer">
+                <div class="cskel-evaluation csk-item"></div>
+                <div class="cskel-btn csk-item"></div>
+            </div>
+        </div>
+    </template>
     <template id="postSkeleton">
         <div class="post post-skel">
             <div class="pskel-header">
