started upgrading to typescript - site.ts - 1

--- a/OmneFictio.Web/Views/Profile/Profile.cshtml
+++ b/OmneFictio.Web/Views/Profile/Profile.cshtml
@@ -72,7 +72,7 @@
         <div class="profile-tabs-mobile">
             <a data-tab="posts"><i class="bi bi-card-text"></i></a>
             <a data-tab="reviews"><i class="bi bi-chat-right"></i></a>
-            <a data-tab="saved"><i class="bi bi-star"></i></a>
+            <a data-tab="saved"><i class="bi bi-bookmark"></i></a>
             <a data-tab="followed"><i class="bi bi-heart"></i></a>
             <a data-tab="friends"><i class="bi bi-people"></i></a>
         </div>
