js to ts - site.js complete

--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -42,23 +42,23 @@ select {
 }
 
 .dblock {
-  display: block;
+  display: block !important;
 }
 
 .dflex {
-  display: flex;
+  display: flex !important;
 }
 
 .dnone {
-  display: none;
+  display: none !important;
 }
 
 .opacity1 {
-  opacity: 1;
+  opacity: 1 !important;
 }
 
 .opacity0 {
-  opacity: 0;
+  opacity: 0 !important;
 }
 
 .modalbg1 {
