js to ts - publish.js finished

--- a/OmneFictio.Web/Views/Home/Publish.cshtml
+++ b/OmneFictio.Web/Views/Home/Publish.cshtml
@@ -84,14 +84,14 @@
     <div class="swap_form">
         <div class="sf-swapformbtn sf-swaptowriting" id="sf-swapToWriting">
             <span>Write</span>
-            <div class="sf-icon d-block" id="sf-w_icon"></div>
+            <div class="sf-icon dblock" id="sf-w_icon"></div>
         </div>
         <div class="sf-swapformbtn sf-swaptorequest" id="sf-swapToRequest">
             <span>Request</span>
             <div class="sf-icon" id="sf-r_icon"></div>
         </div>
     </div>
-    <form class="writing_form d-flex" id="writing_form">
+    <form class="writing_form dflex" id="writing_form">
         <div class="wf-post_body">
             <div class="wf-post_primary">
                 <span>Title</span>
@@ -150,8 +150,7 @@
                 </div>
             </div>
         </div>
-        <span class="wf-errormessage"></span>
-        <span class="wf-successmessage"></span>
+        <span class="wf-message"></span>
         <div class="wf-submit">
             <input type="submit" value="Save"></input>
         </div>
@@ -163,8 +162,7 @@
             <span>Description</span>
             <textarea class="rf-description" name="body" placeholder="Description"></textarea>
         </div>
-        <span class="rf-errormessage"></span>
-        <span class="rf-successmessage"></span>
+        <span class="rf-message"></span>
         <div class="rf-submit">
             <input type="submit" value="Send"></input>
         </div>
