--- a/OmneFictio.Web/wwwroot/css/publish.scss
+++ b/OmneFictio.Web/wwwroot/css/publish.scss
@@ -205,13 +205,10 @@
             }
         }
     }
-    .wf-errormessage, .rf-errormessage{
+    .wf-message, .rf-message{
         text-align: center;
-        color: #b22525;
-    }
-    .wf-successmessage, .rf-successmessage{
-        text-align: center;
-        color: #36914e;
+        //color: #b22525;
+        //color: #36914e;
     }
 }
 
