--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -228,7 +228,7 @@
                         <span class="c-likes vote_count">--</span>
                         <i class="bi bi-hand-thumbs-down dislikebtn" data-action="dislike"
                             data-target_type="comment"></i>
-                        <a href="#" class="c-replybtn">Reply</a>
+                        <a class="c-replybtn">Reply</a>
                     </div>
                     <div class="get_replies">
                         <span class="get_replies-text">
@@ -286,7 +286,7 @@
                     <i class="bi bi-hand-thumbs-up likebtn" data-action="like" data-target_type="comment"></i>
                     <span class="mrc-likes vote_count">--</span>
                     <i class="bi bi-hand-thumbs-down dislikebtn" data-action="dislike" data-target_type="comment"></i>
-                    <a href="#" class="mrc-replybtn">Reply</a>
+                    <a class="mrc-replybtn">Reply</a>
                 </div>
             </div>
         </div>
@@ -316,7 +316,7 @@
                     <i class="bi bi-hand-thumbs-up likebtn" data-action="like" data-target_type="reply"></i>
                     <span class="mrr-likes vote_count">--</span>
                     <i class="bi bi-hand-thumbs-down dislikebtn" data-action="dislike" data-target_type="reply"></i>
-                    <a href="#" class="mrr-replybtn">Reply</a>
+                    <a class="mrr-replybtn">Reply</a>
                 </div>
             </div>
         </div>
@@ -399,10 +399,10 @@
                     <li><a href="/u/@username">
                             <div class="dw-icon-cont"><i class="bi bi-person"></i></div>Profile
                         </a></li>
-                    <li><a href="/settings/library">
+                    <li><a href="/u/@username/saved">
                             <div class="dw-icon-cont"><i class="bi bi-collection"></i></div>Library
                         </a></li>
-                    <li><a href="/settings/friends">
+                    <li><a href="/u/@username/friends">
                             <div class="dw-icon-cont"><i class="bi bi-people"></i></div>Friends
                         </a></li>
                 }
@@ -483,8 +483,8 @@
                             {
                                 <li><a class="ad-username">@username</a></li>
                                 <li><a href="/u/@username">Profile</a></li>
-                                <li><a href="/settings/library">Library</a></li>
-                                <li><a href="/settings/friends">Friends</a></li>
+                                <li><a href="/u/@username/saved">Library</a></li>
+                                <li><a href="/u/@username/friends">Friends</a></li>
                             }
                             else
                             {
