--- a/OmneFictio.Web/wwwroot/css/profile.css
+++ b/OmneFictio.Web/wwwroot/css/profile.css
@@ -224,6 +224,130 @@
   display: block;
 }
 
+#profile-friends .s-friends {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+#profile-friends .s-friends .sf-header {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-items: center;
+  padding: 14px;
+  border-bottom: 1px solid var(--background-color-hover1);
+}
+#profile-friends .s-friends .sf-header .searchF-wrap {
+  width: 70%;
+  max-width: 340px;
+  position: relative;
+}
+#profile-friends .s-friends .sf-header .searchF-wrap i {
+  position: absolute;
+  color: var(--text-color1);
+  font-size: 1.4rem;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%) rotateY(180deg);
+}
+#profile-friends .s-friends .sf-header .searchF-wrap .searchF {
+  font-size: 1.2rem;
+  color: var(--text-color1);
+  background-color: var(--background-color2);
+  box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
+  padding: 6px 42px 6px 10px;
+  border: none;
+  outline: none;
+  width: 100%;
+  border-radius: 4px;
+}
+#profile-friends .s-friends .sf-header .addfriend {
+  font-size: 1.1rem;
+  background-color: #2e7f39;
+  color: #fff;
+  transition: background-color 0.2s;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  padding: 4px 8px 4px 16px;
+  white-space: nowrap;
+}
+#profile-friends .s-friends .sf-header .addfriend:hover {
+  background-color: #4a9b55;
+}
+#profile-friends .s-friends .sf-header .addfriend i {
+  font-size: 0.9rem;
+  padding: 0 4px;
+  -webkit-text-stroke: 1px white;
+}
+#profile-friends .s-friends .sf-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 20px;
+}
+#profile-friends .s-friends .sf-list .sf-usercont {
+  background-color: var(--background-color2);
+  display: flex;
+  width: 100%;
+}
+#profile-friends .s-friends .sf-list .sf-usercont .userpic {
+  display: flex;
+  align-items: center;
+  width: 60px;
+  max-height: 60px;
+  padding: 6px 10px;
+}
+#profile-friends .s-friends .sf-list .sf-usercont .userpic img {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+}
+#profile-friends .s-friends .sf-list .sf-usercont .username {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  color: var(--text-color1);
+  font-family: "Itim", cursive;
+  font-size: 1.2rem;
+  transition: 0.1s ease;
+  overflow: hidden;
+}
+#profile-friends .s-friends .sf-list .sf-usercont .username a {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  margin-right: 6px;
+}
+#profile-friends .s-friends .sf-list .sf-usercont .username a:hover {
+  background-color: var(--background-color-hover1);
+}
+#profile-friends .s-friends .sf-list .sf-usercont .usermenubtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 6px 10px;
+  cursor: pointer;
+  border-left: 1px solid var(--background-color1);
+  font-size: 1.2rem;
+  color: var(--text-color1);
+  transition: 0.1s ease;
+}
+#profile-friends .s-friends .sf-list .sf-usercont .usermenubtn:hover {
+  background-color: var(--background-color-hover1);
+}
+
+@media (min-width: 576px) {
+  #profile-friends .s-friends .sf-list .sf-usercont {
+    width: unset;
+    flex-grow: 1;
+    flex-basis: 26%;
+  }
+}
 @media (min-width: 992px) {
   .profile-cont {
     padding-top: 10px;
@@ -273,5 +397,10 @@
   }
   .profile-cont .profile-details .pr-bio {
     font-size: 0.9rem;
+  }
+}
+@media (max-width: 279px) {
+  #profile-friends .s-friends .sf-list .sf-usercont .userpic {
+    display: none;
   }
 }/*# sourceMappingURL=profile.css.map */
