--- a/OmneFictio.Web/wwwroot/css/settings.css
+++ b/OmneFictio.Web/wwwroot/css/settings.css
@@ -86,144 +86,30 @@ nav .settings-link_cont .desktop_nav li a.active {
   border-radius: 8px;
 }
 
-.settings_body .s-friends {
-  display: none;
-  flex-direction: column;
-  width: 100%;
-}
-.settings_body .s-friends .sf-header {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 10px;
-  align-items: center;
-  padding: 14px;
-  border-bottom: 1px solid var(--background-color-hover1);
-}
-.settings_body .s-friends .sf-header .searchF-wrap {
-  width: 70%;
-  max-width: 340px;
-  position: relative;
-}
-.settings_body .s-friends .sf-header .searchF-wrap i {
-  position: absolute;
-  color: var(--text-color1);
-  font-size: 1.4rem;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%) rotateY(180deg);
-}
-.settings_body .s-friends .sf-header .searchF-wrap .searchF {
-  font-size: 1.2rem;
-  color: var(--text-color1);
-  background-color: var(--background-color2);
-  box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
-  padding: 6px 42px 6px 10px;
-  border: none;
-  outline: none;
-  width: 100%;
-  border-radius: 4px;
-}
-.settings_body .s-friends .sf-header .addfriend {
-  font-size: 1.1rem;
-  background-color: #2e7f39;
-  color: #fff;
-  transition: background-color 0.2s;
-  outline: none;
-  border: none;
-  border-radius: 5px;
-  padding: 4px 8px 4px 16px;
-  white-space: nowrap;
-}
-.settings_body .s-friends .sf-header .addfriend:hover {
-  background-color: #4a9b55;
-}
-.settings_body .s-friends .sf-header .addfriend i {
-  font-size: 0.9rem;
-  padding: 0 4px;
-  -webkit-text-stroke: 1px white;
-}
-.settings_body .s-friends .sf-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  padding: 20px;
-}
-.settings_body .s-friends .sf-list .sf-usercont {
-  background-color: var(--background-color2);
-  display: flex;
-  width: 100%;
-}
-.settings_body .s-friends .sf-list .sf-usercont .userpic {
-  display: flex;
-  align-items: center;
-  width: 60px;
-  max-height: 60px;
-  padding: 6px 10px;
-}
-.settings_body .s-friends .sf-list .sf-usercont .userpic img {
-  width: 100%;
-  height: 100%;
-}
-.settings_body .s-friends .sf-list .sf-usercont .username {
-  flex-grow: 1;
-  display: flex;
-  align-items: center;
-  height: 100%;
-  color: var(--text-color1);
-  font-family: "Itim", cursive;
-  font-size: 1.2rem;
-  transition: 0.1s ease;
-  overflow: hidden;
-}
-.settings_body .s-friends .sf-list .sf-usercont .username a {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  padding: 0 10px;
-}
-.settings_body .s-friends .sf-list .sf-usercont .username a:hover {
-  background-color: var(--background-color-hover1);
-}
-.settings_body .s-friends .sf-list .sf-usercont .usermenubtn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 6px 10px;
-  cursor: pointer;
-  border-left: 1px solid var(--background-color1);
-  font-size: 1.2rem;
-  color: var(--text-color1);
-  transition: 0.1s ease;
-}
-.settings_body .s-friends .sf-list .sf-usercont .usermenubtn:hover {
-  background-color: var(--background-color-hover1);
-}
-
-.settings_body .s-profile_settings {
+.settings_body .settings_body .s-profile_settings {
   display: flex;
   flex-direction: column;
   width: 100%;
   padding: 12px;
 }
-.settings_body .s-profile_settings .ps-row {
+.settings_body .settings_body .s-profile_settings .ps-row {
   display: flex;
   flex-direction: column;
   gap: 8px 30px;
 }
-.settings_body .s-profile_settings .ps-row .ps-cell {
+.settings_body .settings_body .s-profile_settings .ps-row .ps-cell {
   display: flex;
   flex-direction: column;
   gap: 6px;
 }
-.settings_body .s-profile_settings .ps-row .ps-cell > span,
-.settings_body .s-profile_settings .ps-row .ps-cell label {
+.settings_body .settings_body .s-profile_settings .ps-row .ps-cell > span,
+.settings_body .settings_body .s-profile_settings .ps-row .ps-cell label {
   font-size: 1.2rem;
   font-family: "Gudea";
 }
-.settings_body .s-profile_settings .ps-row .ps-cell > input,
-.settings_body .s-profile_settings .ps-row .ps-cell textarea,
-.settings_body .s-profile_settings .ps-row .ps-cell select {
+.settings_body .settings_body .s-profile_settings .ps-row .ps-cell > input,
+.settings_body .settings_body .s-profile_settings .ps-row .ps-cell textarea,
+.settings_body .settings_body .s-profile_settings .ps-row .ps-cell select {
   flex-grow: 1;
   border: none;
   outline: none;
@@ -234,34 +120,34 @@ nav .settings-link_cont .desktop_nav li a.active {
   margin-bottom: 10px;
   font-family: "Itim", cursive;
 }
-.settings_body .s-profile_settings .ps-ppic_cont {
+.settings_body .settings_body .s-profile_settings .ps-ppic_cont {
   width: 120px;
   height: 120px;
   border-radius: 8px;
   background-color: var(--background-color2);
   margin-bottom: 10px;
 }
-.settings_body .s-profile_settings .ps-preferences {
+.settings_body .settings_body .s-profile_settings .ps-preferences {
   margin: 10px 0;
   padding-left: 16px;
   font-family: "Josefin Sans", sans-serif;
 }
-.settings_body .s-profile_settings .psr-preferences label {
+.settings_body .settings_body .s-profile_settings .psr-preferences label {
   display: flex;
   align-items: center;
 }
-.settings_body .s-profile_settings .psr-preferences label input[type=checkbox] {
+.settings_body .settings_body .s-profile_settings .psr-preferences label input[type=checkbox] {
   height: 16px;
   width: 16px;
   margin-left: 10px;
 }
-.settings_body .s-profile_settings .psr-actions {
+.settings_body .settings_body .s-profile_settings .psr-actions {
   flex-direction: row;
   justify-content: center;
   margin-top: 36px;
   gap: 20%;
 }
-.settings_body .s-profile_settings .psr-actions > button {
+.settings_body .settings_body .s-profile_settings .psr-actions > button {
   border: none;
   outline: none;
   border-radius: 6px;
@@ -271,16 +157,16 @@ nav .settings-link_cont .desktop_nav li a.active {
   font-family: "Gudea", cursive;
   font-size: 1.2rem;
 }
-.settings_body .s-profile_settings .psr-actions > button:first-child {
+.settings_body .settings_body .s-profile_settings .psr-actions > button:first-child {
   background-color: var(--button-red);
 }
-.settings_body .s-profile_settings .psr-actions > button:first-child:hover {
+.settings_body .settings_body .s-profile_settings .psr-actions > button:first-child:hover {
   background-color: var(--button-red-hover);
 }
-.settings_body .s-profile_settings .psr-actions > button:last-child {
+.settings_body .settings_body .s-profile_settings .psr-actions > button:last-child {
   background-color: var(--button-green);
 }
-.settings_body .s-profile_settings .psr-actions > button:last-child:hover {
+.settings_body .settings_body .s-profile_settings .psr-actions > button:last-child:hover {
   background-color: var(--button-green-hover);
 }
 
@@ -378,18 +264,12 @@ nav .settings-link_cont .desktop_nav li a.active {
   }
 }
 @media (min-width: 992px) {
-  .settings_body .s-friends .sf-list .sf-usercont {
-    width: unset;
-  }
   .s-library .lib-body.lib-masonry {
     flex-direction: row !important;
     gap: 1%;
   }
 }
 @media (max-width: 279px) {
-  .settings_body .s-friends .sf-list .sf-usercont .userpic {
-    display: none;
-  }
   .s-profile_settings .psr-actions button {
     padding: 8px 3% !important;
   }
