--- a/OmneFictio.Web/wwwroot/css/settings.scss
+++ b/OmneFictio.Web/wwwroot/css/settings.scss
@@ -103,138 +103,7 @@ nav {
     border-radius: 8px;
 }
 
-.settings_body .s-friends {
-    display: none; //flex
-    flex-direction: column;
-    width: 100%;
-
-    .sf-header {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        gap: 10px;
-        align-items: center;
-        padding: 14px;
-        border-bottom: 1px solid var(--background-color-hover1);
-
-        .searchF-wrap {
-            width: 70%;
-            max-width: 340px;
-            position: relative;
-
-            i {
-                position: absolute;
-                color: var(--text-color1);
-                font-size: 1.4rem;
-                right: 10px;
-                top: 50%;
-                transform: translateY(-50%) rotateY(180deg);
-            }
-
-            .searchF {
-                font-size: 1.2rem;
-                color: var(--text-color1);
-                background-color: var(--background-color2);
-                box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
-                padding: 6px 42px 6px 10px;
-                border: none;
-                outline: none;
-                width: 100%;
-                border-radius: 4px;
-            }
-        }
-
-        .addfriend {
-            font-size: 1.1rem;
-            background-color: #2e7f39;
-            color: #fff;
-            transition: background-color 0.2s;
-            outline: none;
-            border: none;
-            border-radius: 5px;
-            padding: 4px 8px 4px 16px;
-            white-space: nowrap;
-
-            &:hover {
-                background-color: #4a9b55;
-            }
-
-            i {
-                font-size: 0.9rem;
-                padding: 0 4px;
-                -webkit-text-stroke: 1px white;
-            }
-        }
-    }
-
-    .sf-list {
-        display: flex;
-        flex-wrap: wrap;
-        //justify-content: space-evenly;
-        gap: 10px;
-        padding: 20px;
-
-        .sf-usercont {
-            background-color: var(--background-color2);
-            display: flex;
-            width: 100%;
-
-            //border-radius: 6px;
-            .userpic {
-                display: flex;
-                align-items: center;
-                width: 60px;
-                max-height: 60px;
-                padding: 6px 10px;
-
-                img {
-                    width: 100%;
-                    height: 100%;
-                }
-            }
-
-            .username {
-                flex-grow: 1;
-                display: flex;
-                align-items: center;
-                height: 100%;
-                color: var(--text-color1);
-                font-family: 'Itim', cursive;
-                font-size: 1.2rem;
-                transition: 0.1s ease;
-                overflow: hidden;
-
-                a {
-                    height: 100%;
-                    display: flex;
-                    align-items: center;
-                    padding: 0 10px;
-
-                    &:hover {
-                        background-color: var(--background-color-hover1);
-                    }
-                }
-            }
-
-            .usermenubtn {
-                //border-radius: 0 6px 6px 0;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 6px 10px;
-                cursor: pointer;
-                border-left: 1px solid var(--background-color1);
-                font-size: 1.2rem;
-                color: var(--text-color1);
-                transition: 0.1s ease;
-
-                &:hover {
-                    background-color: var(--background-color-hover1);
-                }
-            }
-        }
-    }
-}
+.settings_body 
 
 .settings_body .s-profile_settings {
     display: flex; //flex
@@ -455,9 +324,6 @@ nav {
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-    .settings_body .s-friends .sf-list .sf-usercont {
-        width: unset;
-    }
     .s-library .lib-body.lib-masonry{
         flex-direction: row !important;
         gap: 1%;
@@ -474,10 +340,6 @@ nav {
 //extra
 
 @media (max-width: 279px) {
-    .settings_body .s-friends .sf-list .sf-usercont .userpic {
-        display: none;
-    }
-
     .s-profile_settings .psr-actions button {
         padding: 8px 3% !important;
     }
